Fix horizontal scroll as a result of unnecessary padding

--- a/styles.css
+++ b/styles.css
@@ -58,7 +58,6 @@ nav ul {
   align-items: center;
   justify-content: space-between;
   width: 100vw;
-  padding-right: 30px;
 }
 
 #menu-icon {
